# old-haskell-ray-tracer

./: BasicRayTracer.cabal  README.md
src/: CoreMath.hs  CoreTypes.hs  LocalModels.hs  Main.hs  Samplers.hs  Tracer.hs  ViewingSystem.hs
