name:                 BasicRayTracer
version:              0.1.0.0
synopsis:             
-- description:
-- license:
-- license-file:
homepage:             
author:               Kraglik Igor
maintainer:           
category:             
-- copyright:
build-type:           Simple
extra-source-files:   src/CoreTypes.hs, src/CoreMath.hs, src/Samplers.hs, src/Tracer.hs, src/LocalModels.hs, src/ViewingSystem.hs
cabal-version:        >=1.10

executable BasicRayTracer
  ghc-options: -O3 -threaded
  main-is:              Main.hs
  other-modules:        CoreTypes, CoreMath, Samplers, Tracer, LocalModels, ViewingSystem
  -- other-extensions:
  build-depends:        base >= 4.7 && < 5, parallel
  hs-source-dirs:       src
  default-language:     Haskell2010
